--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,8 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
     padding: 0;
-	justify-content: center;
-	align-items: flex-start;
-	min-height: 100vh;
+	justify-content: center !important;
+	align-items: flex-start !important;
   }
   
   .container {
